# fpm

./: .gitignore  .localerc.json  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/registry/back-end/: .env.example  Cargo.toml
apps/registry/back-end/migrations/: 20260427035646_create_core_tables.sql  20260429070814_add_refresh_token.sql
apps/registry/back-end/src/: config.rs  main.rs
apps/registry/back-end/src/entities/: mod.rs  organization.rs  organization_member.rs  organization_members.rs  package_version.rs  prelude.rs  tokens.rs  user.rs  user_refresh_token.rs
apps/registry/back-end/src/modules/: mod.rs
apps/registry/back-end/src/modules/auth/: controller.rs  dto.rs  middleware.rs  mod.rs  service.rs
apps/registry/back-end/src/modules/organization/: controller.rs  dto.rs  mod.rs  service.rs
apps/registry/back-end/src/modules/package/: controller.rs  dto.rs  mod.rs  service.rs
apps/registry/back-end/src/modules/user/: controller.rs  dto.rs  mod.rs
apps/registry/back-end/src/services/: idp.rs  mod.rs
apps/registry/back-end/src/utils/: mod.rs  token.rs
apps/registry/front-end/: .env.example  index.html  package.json  tsconfig.json  vite.config.js
apps/registry/front-end/src/: App.ts  App.vue  main.ts
apps/registry/front-end/src/api/: auth.ts  index.ts  organizations.ts  (+2 more)
registry/back-end/: Cargo.toml
registry/back-end/src/: main.rs
registry/back-end/src/entities/: mod.rs  organization_member.rs  organizations.rs  package.rs  token.rs  user.rs  users.rs
registry/back-end/src/modules/: mod.rs
registry/back-end/src/modules/auth/: controller.rs
registry/front-end/: package.json
(+38 files in other folders)
