[package]
name = "fpm-registry"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
dotenvy = "0.15"
sea-orm = { version = "1.1", features = [
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "macros",
] }
uuid = { version = "1.10", features = ["v7", "serde"] }
sha2 = "0.10"
utoipa = { version = "4", features = ["uuid"] }
utoipa-swagger-ui = { version = "6", features = ["axum"] }
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4.3"
rand = "0.10.1"
